# rove

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  architecture.min.mmd  architecture.mmd  test_config.toml  test_manifest.json
.cargo/: config.toml
.github/workflows/: ci.yml  plugins.yml  release.yml
core-tools/: README.md
core-tools/ui-server/: Cargo.toml
docs/: architecture.md  core_tool_development.md  deployment.md  dev_testing.md  plugin_development.md  security.md
engine/: Cargo.toml  README.md  build.rs
engine/examples/: ollama_provider_example.rs  secret_manager_usage.rs  simple_task_example.rs
engine/migrations/: 001_initial.sql  002_fts_memory.sql
engine/src/: cli.rs  handlers.rs  lib.rs  main.rs
engine/src/agent/: core.rs  mod.rs  steering.rs
engine/src/agent/skills_template/: architecture.md  brains.md  rust_idioms.md  security.md  testing.md  workflow.md
engine/src/bot/: telegram.rs
engine/src/command_executor/: mod.rs
engine/src/conductor/: context.rs  evaluator.rs  executor.rs  memory.rs  mod.rs  planner.rs  types.rs
engine/src/config/: mod.rs
engine/src/crypto/: mod.rs
engine/src/daemon/: mod.rs
engine/src/db/: mod.rs  tasks.rs
engine/src/fs_guard/: mod.rs
engine/src/injection_detector/: mod.rs
engine/src/llm/: anthropic.rs  gemini.rs  mod.rs  nim.rs  nvidia_nim.rs  ollama.rs  openai.rs  router.rs
engine/src/message_bus/: mod.rs
engine/src/platform/: mod.rs
engine/src/risk_assessor/: mod.rs
engine/src/runtime/: native.rs  wasm.rs
engine/src/secrets/: cache.rs  mod.rs  string.rs
engine/src/tools/: filesystem.rs  mod.rs  terminal.rs
engine/tests/: agent_core_integration_test.rs  command_executor_integration_test.rs  crypto_test.rs  daemon_graceful_shutdown_test.rs  db_integration_test.rs  ollama_integration_test.rs  platform_integration_test.rs  router_integration_test.rs  secrets_integration_test.rs  security_tests.rs  wasm_crash_handling_test.rs  wasm_runtime_integration_test.rs
manifest/: README.md  build-manifest.py  gen_dev_key.sh  sign-manifest.py  team_public_key.hex
plugins/: README.md
rove-community-plugins/: Cargo.toml
rove-community-plugins/src/: lib.rs
rove-plugins/: Cargo.toml
rove-plugins/src/: installer.rs  lib.rs  registry.rs  verifier.rs
scripts/: README.md  build-all.sh  generate_keys.py  install.ps1  install.sh  release.sh
sdk/: README.md
(+22 files in other folders)
