[package]
name = "rove-plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sdk = { path = "../sdk" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
tokio.workspace = true
dirs.workspace = true
hex = "0.4"
